k8s/infrastructure/postgres/pgweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
  namespace: default
spec:
  selector:
    app: pgweb
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
